--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/images/favicon.png" />
     <title>Expensify App</title>
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
 </head>
 
 <body>
