--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
-    <title>Expensify App</title>
-    <link rel="stylesheet" type="text/css" href="./dist/styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Expensify</title>
+  <link rel="icon" type="image/png" href="/images/favicon.png" />
+  <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
 </head>
 
 <body>
-    <div id="app"></div>
-    <script src="/dist/bundle.js"></script>
-
+  <div id="app"></div>
+  <script src="/dist/bundle.js"></script>
 </body>
 
 </html>
